# whisper-stream-rs

./: .gitignore  Cargo.toml  entitlements.plist
examples/: commandline.rs  maximum.rs  minimal.rs  standart.rs  stt-server.rs
src/: audio.rs  audio_utils.rs  error.rs  lib.rs  main.rs  model.rs  score.rs  stream.rs  whisper_stream.rs
