[package]
name = "whisper-stream-rs"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/milangress/whisper-stream-rs"
documentation = "https://docs.rs/whisper-stream-rs"
description = "A library for streaming transcription of audio using the Whisper model."
authors = ["Milan"]


[dependencies]
whisper-rs = { version = "0.14.2", default-features = false, features = ["log_backend"] }
cpal = "0.15.3"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0.1"
hound = "3.5.1"
ctrlc = "3"
rubato = "0.15"
anyhow = "1.0.82"
indicatif = "0.17.7"
thiserror = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
zip = "0.6"


[features]
default = []
coreml = ["whisper-rs/coreml"]
vulkan = ["whisper-rs/vulkan"]

[[example]]
name = "commandline"
path = "examples/commandline.rs"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
