[package]
name = "whisper-stream-rs"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/milangress/whisper-stream-rs"
documentation = "https://docs.rs/whisper-stream-rs"
description = "A library for streaming transcription of audio using the Whisper model."
authors = ["Milan"]


[dependencies]
whisper-rs = { version = "0.14.2", default-features = false, features = ["log_backend"] }
cpal = "0.15.3"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0.1"
hound = "3.5.1"
ctrlc = "3"
rubato = "0.15"
anyhow = "1.0.82"
indicatif = "0.17.7"
thiserror = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
zip = "0.6"


[features]
default = []
coreml = ["whisper-rs/coreml"]
vulkan = ["whisper-rs/vulkan"]

[[example]]
name = "commandline"
path = "examples/commandline.rs"

[[example]]
name = "stt-server"
path = "examples/stt-server.rs"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.7"
toml = "0.9.5"
smart-default = "0.7.1"
axum = { version = "0.8.4", features = ["macros", "ws", "http2"] }
bs58 = "0.5.1"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "full"] }
ulid = "1.2.1"
wyhash = "0.6.0"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["full"] }
